@@ -10,11 +10,11 @@ import uk.gov.hmcts.reform.civil.callback.CallbackHandler;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
-import uk.gov.hmcts.reform.civil.enums.MultiPartyScenario;
 import uk.gov.hmcts.reform.civil.model.BusinessProcess;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.querymanagement.CaseMessage;
 import uk.gov.hmcts.reform.civil.service.CoreCaseUserService;
+import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.UserService;
 import uk.gov.hmcts.reform.civil.utils.AssignCategoryId;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
@@ -23,6 +23,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
+import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.reform.civil.callback.CallbackParams.Params.BEARER_TOKEN;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_START;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
@@ -34,10 +35,9 @@ import static uk.gov.hmcts.reform.civil.enums.CaseState.PENDING_CASE_ISSUED;
 import static uk.gov.hmcts.reform.civil.enums.CaseState.PROCEEDS_IN_HERITAGE_SYSTEM;
 import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.assignCategoryIdToAttachments;
 import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.buildLatestQuery;
-import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.getUserQueriesByRole;
-import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.updateQueryCollectionPartyName;
-import static uk.gov.hmcts.reform.civil.utils.UserRoleUtils.isLIPClaimant;
-import static uk.gov.hmcts.reform.civil.utils.UserRoleUtils.isLIPDefendant;
+import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.clearOldQueryCollections;
+import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.logMigrationSuccess;
+import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.migrateAllQueries;
 
 @Service
 @RequiredArgsConstructor
@@ -49,15 +49,19 @@ public class RaiseQueryCallbackHandler extends CallbackHandler {
     protected final UserService userService;
     protected final CoreCaseUserService coreCaseUserService;
     private final AssignCategoryId assignCategoryId;
+    private final FeatureToggleService featureToggleService;
 
     public static final String INVALID_CASE_STATE_ERROR = "If your case is offline, you cannot raise a query.";
+    public static final String QM_NOT_ALLOWED_ERROR = "The raise a query function is not available on this case. If you have a query, contact the court handling this case.";
+    public static final String FOLLOW_UPS_ERROR = "Consecutive follow up messages are not allowed for query management.";
+    public static final String PUBLIC_QUERIES_PARTY_NAME = "All queries";
 
     @Override
     protected Map<String, Callback> callbacks() {
         return Map.of(
-            callbackKey(ABOUT_TO_START), this::checkCaseState,
-            callbackKey(ABOUT_TO_SUBMIT), this::setManagementQuery,
-            callbackKey(SUBMITTED), this::emptySubmittedCallbackResponse
+            callbackKey(ABOUT_TO_START), this::aboutToStart,
+            callbackKey(ABOUT_TO_SUBMIT), this::aboutToSubmit,
+            callbackKey(SUBMITTED), this::submitted
         );
     }
 
@@ -66,19 +70,32 @@ public class RaiseQueryCallbackHandler extends CallbackHandler {
         return EVENTS;
     }
 
-    private CallbackResponse checkCaseState(CallbackParams callbackParams) {
-        List<CaseState> invalidStates = Arrays.asList(PENDING_CASE_ISSUED, CASE_DISMISSED,
-                                                      PROCEEDS_IN_HERITAGE_SYSTEM, CLOSED);
-        if (invalidStates.contains(callbackParams.getCaseData().getCcdState())) {
+    private CallbackResponse aboutToStart(CallbackParams callbackParams) {
+        CaseData caseData = callbackParams.getCaseData();
+
+        if (!featureToggleService.isPublicQueryManagementEnabled(caseData)) {
+            List<String> errors = List.of(QM_NOT_ALLOWED_ERROR);
+            return AboutToStartOrSubmitCallbackResponse.builder()
+                .errors(errors).build();
+        }
+
+        List<CaseState> invalidStates = Arrays.asList(
+            PENDING_CASE_ISSUED, CASE_DISMISSED, PROCEEDS_IN_HERITAGE_SYSTEM, CLOSED);
+        if (invalidStates.contains(caseData.getCcdState())) {
             List<String> errors = List.of(INVALID_CASE_STATE_ERROR);
 
             return AboutToStartOrSubmitCallbackResponse.builder()
                 .errors(errors).build();
         }
-        return emptyCallbackResponse(callbackParams);
+
+        CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
+        migrateAllQueries(caseDataBuilder);
+
+        return AboutToStartOrSubmitCallbackResponse.builder()
+            .data(caseDataBuilder.build().toMap(objectMapper)).build();
     }
 
-    private CallbackResponse setManagementQuery(CallbackParams callbackParams) {
+    private CallbackResponse aboutToSubmit(CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
 
         List<String> roles = retrieveUserCaseRoles(
@@ -86,21 +103,28 @@ public class RaiseQueryCallbackHandler extends CallbackHandler {
             callbackParams.getParams().get(BEARER_TOKEN).toString()
         );
 
-        CaseMessage latestCaseMessage = getUserQueriesByRole(caseData, roles).latest();
-
-        assignCategoryIdToAttachments(latestCaseMessage, assignCategoryId, roles);
-        CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder().qmLatestQuery(
-            buildLatestQuery(latestCaseMessage));
-
-        if (!isLIPClaimant(roles) && !isLIPDefendant(roles)) {
-            updateQueryCollectionPartyName(roles, MultiPartyScenario.getMultiPartyScenario(caseData), caseDataBuilder);
+        CaseMessage latestCaseMessage = caseData.getQueries().latest();
+        if (nonNull(caseData.getQueries()) && caseData.getQueries().messageThread(latestCaseMessage).size() % 2 == 0) {
+            return AboutToStartOrSubmitCallbackResponse.builder().errors(List.of(FOLLOW_UPS_ERROR)).build();
         }
 
+        assignCategoryIdToAttachments(latestCaseMessage, assignCategoryId, roles);
+        CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
+
+        caseDataBuilder
+            .queries(caseData.getQueries().toBuilder().partyName(PUBLIC_QUERIES_PARTY_NAME).build())
+            .qmLatestQuery(buildLatestQuery(latestCaseMessage, caseData, roles));
+        clearOldQueryCollections(caseDataBuilder);
+
         return AboutToStartOrSubmitCallbackResponse.builder()
-            .data(caseDataBuilder
-                      .businessProcess(BusinessProcess.ready(queryManagementRaiseQuery))
-                      .build().toMap(objectMapper))
+            .data(caseDataBuilder.businessProcess(BusinessProcess.ready(queryManagementRaiseQuery)).build().toMap(objectMapper))
             .build();
+    }
+
+    private CallbackResponse submitted(CallbackParams callbackParams) {
+        CaseData caseDataBefore = callbackParams.getCaseDataBefore();
+        logMigrationSuccess(callbackParams.getCaseDataBefore());
+        return emptySubmittedCallbackResponse(callbackParams);
     }
 
     private List<String> retrieveUserCaseRoles(String caseReference, String userToken) {
